chore: jdk26 and AOT cache support